<resources>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="analyze_fragment_label">analyze</string>
    <string name="map_fragment_label">map</string>
    <string name="music_fragment_label">music</string>
    <string name="options_fragment_lable">options</string>

    <string name="raw_data">Raw data visualization</string>
    <string name="fatigue">fatigue</string>
    <string name="wake">wake</string>
    <string name="state">state: %1$s</string>
    <string name="state_fatigue">fatigue</string>
    <string name="state_wake">wake</string>
    <string name="connect">CONNECT</string>


    <string name="music_next">Next</string>
    <string name="music_previous">Previous</string>
    <string name="music_pause">pause</string>
    <string name="music_play">play</string>
    <string name="now_playing">Now playing: %1$s.mp3</string>

    <string name="theme_options">Theme</string>
    <!-- Theme Options -->
    <string-array name="themes_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>
    <string name="language_options">Language</string>
    <!-- Language Options -->
    <string-array name="language_options">
        <item>English</item>
        <item>中文</item>
    </string-array>
    <string name="app_name">MindAlert</string>
</resources>